--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <!-- <script src="https://YOUR-SERVER/javascripts/api/tableau-2.min.js"></script> -->
 </body>
 </html>
